crates/mori-lexer/src/snapshots/mori_lexer__tests__number_with_trailing_underscore.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\nconst n = 1_000_;"
---
mori::lex::misplaced_underscore

  × An underscore in a number must sit between two digits.
   ╭─[test.mori:1:16]
 1 │ const n = 1_000_;
   ·                ┬
   ·                ╰── this underscore
   ╰────
  help: Underscores group digits:

            1_000_000
            0.000_001
