crates/mori-lexer/src/snapshots/mori_lexer__tests__number_with_two_points.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\nconst version = 1.2.3;"
---
mori::lex::extra_decimal_point

  × A number can have only one decimal point.
   ╭─[test.mori:1:20]
 1 │ const version = 1.2.3;
   ·                    ┬
   ·                    ╰── second decimal point
   ╰────
  help: Write a single point:

            10.50
