crates/mori-lexer/src/snapshots/mori_lexer__tests__number_with_underscore_after_point.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\nconst n = 1._5;"
---
mori::lex::misplaced_underscore

  × An underscore in a number must sit between two digits.
   ╭─[test.mori:1:13]
 1 │ const n = 1._5;
   ·             ┬
   ·             ╰── this underscore
   ╰────
  help: Underscores group digits:

            1_000_000
            0.000_001
