crates/mori-lexer/src/snapshots/mori_lexer__tests__numbers.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\n0 7 10 1_000 0.5 10.00 1_000.000_1 0.000_001"
---
Number         0..1       "0"
Number         2..3       "7"
Number         4..6       "10"
Number         7..12      "1_000"
Number         13..16     "0.5"
Number         17..22     "10.00"
Number         23..34     "1_000.000_1"
Number         35..44     "0.000_001"
Eof            44..44     ""
