crates/mori-lexer/src/snapshots/mori_lexer__tests__qualified_call_name.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\namm.swap_exact_input(pool: p)"
---
Ident          0..3       "amm"
Dot            3..4       "."
Ident          4..20      "swap_exact_input"
LParen         20..21     "("
KwPool         21..25     "pool"
Colon          25..26     ":"
Ident          27..28     "p"
RParen         28..29     ")"
Eof            29..29     ""
