crates/mori-lexer/src/snapshots/mori_lexer__tests__single_quotes.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\nconst name = 'Midnight';"
---
BETA_CHARACTER

  × Strings use double quotes, not single quotes.
   ╭─[test.mori:1:14]
 1 │ const name = 'Midnight';
   ·              ┬
   ·              ╰── single quote
   ╰────
  help: Write `"Midnight"` instead of `'Midnight'`.
