crates/mori-lexer/src/snapshots/mori_lexer__tests__string_syntax_error_wins_over_lone_surrogate.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\nconst e = \"\\uD83D\\q\";"
---
BETA_STRING

  × `\q` is not an escape I know.
   ╭─[test.mori:1:18]
 1 │ const e = "\uD83D\q";
   ·                  ─┬
   ·                   ╰── unknown escape
   ╰────
  help: Strings use JSON escapes: `\"` `\\` `\/` `\b` `\f` `\n` `\r` `\t` and
        `\uXXXX`. To write a backslash itself, use `\\`.
