crates/mori-lexer/src/snapshots/mori_lexer__tests__string_with_invalid_escape.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\nconst path = \"C:\\data\";"
---
mori::lex::invalid_escape

  × `\d` is not an escape I know.
   ╭─[test.mori:1:17]
 1 │ const path = "C:\data";
   ·                 ─┬
   ·                  ╰── unknown escape
   ╰────
  help: Strings use JSON escapes. To write a backslash itself, use `\\`:

            \"  \\  \/  \b  \f  \n  \r  \t  \uXXXX
