crates/mori-lexer/src/snapshots/mori_lexer__tests__string_with_line_break.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\nconst name = \"Midnight;\nconst other = \"x\";\n"
---
BETA_STRING

  × This string runs onto the next line.
   ╭─[test.mori:1:24]
 1 │ const name = "Midnight;
   ·                        ┬
   ·                        ╰── the line ends inside the string
 2 │ const other = "x";
   ╰────
  help: A string must end on the line where it starts. If you forgot the
        closing `"`, add it. If you want a line break in the text, write `\n`.
