crates/mori-lexer/src/snapshots/mori_lexer__tests__string_with_lone_surrogate.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\nconst e = \"\\uD83D!\";"
---
mori::lex::lone_surrogate

  × This escape is half of a surrogate pair.
   ╭─[test.mori:1:12]
 1 │ const e = "\uD83D!";
   ·            ───┬──
   ·               ╰── this half has no partner
   ╰────
  help: A character above U+FFFF is written as a high escape followed by a low
        one, or directly:

            "\uD83D\uDE00"
