crates/mori-lexer/src/snapshots/mori_lexer__tests__string_with_short_unicode_escape.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\nconst e = \"\\u00e\";"
---
BETA_STRING

  × A `\u` escape needs exactly four hexadecimal digits.
   ╭─[test.mori:1:12]
 1 │ const e = "\u00e";
   ·            ──┬──
   ·              ╰── this escape is incomplete
   ╰────
  help: For example, `\u00e9` is `é`. You can also write the character
        directly.
