crates/mori-lexer/src/snapshots/mori_lexer__tests__string_with_tab_character.snap
---
source: crates/mori-lexer/src/tests.rs
description: "Code:\n\nconst name = \"a\tb\";"
---
BETA_STRING

  × This string contains the control character U+0009.
   ╭─[test.mori:1:16]
 1 │ const name = "a b";
   ·                ┬
   ·                ╰── this character
   ╰────
  help: Write a tab as `\t`.
